--- a/Views/Account/Register.cshtml
+++ b/Views/Account/Register.cshtml
@@ -14,28 +14,38 @@
                 <div class="form-floating mb-3">
                     <input type="email" class="form-control" id="FullName" placeholder="Иванов Иван Иванович" asp-for="FullName">
                     <label for="FullName">Ваше имя</label>
-                    <span asp-validation-for="FullName" class="text-danger"></span>
                 </div>
                 <div class="form-floating mb-3">
                     <input type="email" class="form-control" id="Email" placeholder="name@example.com" asp-for="Email">
                     <label for="Email">Адрес электронной почты</label>
-                    <span asp-validation-for="Email" class="text-danger"></span>
                 </div>
                 <div class="form-floating mb-3">
                     <input type="password" class="form-control" id="Password" placeholder="Пароль" asp-for="Password">
                     <label for="Password">Пароль</label>
-                    <span asp-validation-for="Password" class="text-danger"></span>
                 </div>
                 <div class="form-floating mb-3">
                     <input type="password" class="form-control" id="ConfirmPassword" placeholder="Подтверждение пароля" asp-for="ConfirmPassword">
                     <label for="ConfirmPassword">Подтверждение пароля</label>
-                    <span asp-validation-for="ConfirmPassword" class="text-danger"></span>
                 </div>
                 <input type="hidden" asp-for="ReturnUrl"/>
                 <button type="submit" class="btn btn-primary w-100">Зарегистрироваться</button>
             </form>
         </div>
     </div>
+</div>
+
+<div class="toast-container position-fixed bottom-0 end-0 p-3">
+    @foreach (var error in ViewData.ModelState.Values.SelectMany(v => v.Errors))
+    {
+        <div id="liveToast" class="toast text-bg-danger border-0 show" role="alert" aria-live="assertive" aria-atomic="true">
+            <div class="d-flex user-select-none">
+                <div class="toast-body">
+                    @error.ErrorMessage
+                </div>
+                <button type="button" class="btn-close btn-close-white me-2 m-auto" data-bs-dismiss="toast" aria-label="Закрыть"></button>
+            </div>
+        </div>
+    }
 </div>
 
 @section Scripts {
