Update password toggle

--- a/Views/Account/Login.cshtml
+++ b/Views/Account/Login.cshtml
@@ -16,8 +16,14 @@
                     <label for="Email">Адрес электронной почты</label>
                 </div>
                 <div class="form-floating mb-3">
-                    <input type="password" class="form-control" id="Password" placeholder="Пароль" asp-for="Password">
-                    <label for="Password">Пароль</label>
+                    <input class="form-control" type="password"
+                           placeholder="Пароль" required asp-for="Password" id="passwordInput">
+                    <label for="passwordInput">Пароль</label>
+                    <button type="button"
+                            class="btn btn-sm btn-outline-secondary border-0 position-absolute end-0 top-50 translate-middle-y me-2"
+                            onclick="togglePasswordVisibility()">
+                        <i id="passwordIcon" class="bi bi-eye" style="font-size: 1.15rem !important;"></i>
+                    </button>
                 </div>
                 <div class="d-flex justify-content-between align-items-center">
                     <div class="form-check">
