Fix bugs with SignalR

--- a/Views/Orders/Index.cshtml
+++ b/Views/Orders/Index.cshtml
@@ -12,10 +12,10 @@
         <a asp-action="Create" class="btn btn-success">Новый заказ</a>
     </div>
 
-    <div class="row">
+    <div class="row" id="ordersRow">
         @foreach (var order in Model)
         {
-            <div class="col-12 col-md-6 col-lg-4 mb-4">
+            <div class="col-12 col-md-6 col-lg-4 mb-4" id="order-@order.OrderId">
                 <div class="card animate__animated animate__fadeInUp">
                     <div class="card-header">
                         Заказ № @order.OrderId
@@ -34,3 +34,44 @@
         }
     </div>
 </div>
+
+<!-- Подключаем SignalR клиентскую библиотеку -->
+<script src="https://cdnjs.cloudflare.com/ajax/libs/microsoft-signalr/6.0.0/signalr.min.js"></script>
+<script type="text/javascript">
+    // Создаем подключение к SignalR хабу
+    const connection = new signalR.HubConnectionBuilder()
+        .withUrl("/ordersHub")
+        .build();
+
+    // Обработка события "ReceiveNewOrder" от сервера
+    connection.on("ReceiveNewOrder", function(order) {
+        // Преобразуем дату в формат строки
+        const pickupDate = new Date(order.pickupDate).toLocaleDateString();
+        // Формируем HTML-код для нового заказа
+        const orderHtml = `
+            <div class="col-12 col-md-6 col-lg-4 mb-4" id="order-${order.orderId}">
+                <div class="card animate__animated animate__fadeInUp">
+                    <div class="card-header">
+                        Заказ № ${order.orderId}
+                    </div>
+                    <div class="card-body">
+                        <p class="card-text">
+                            <strong>Отправитель:</strong> ${order.senderCity}, ${order.senderAddress}<br />
+                            <strong>Получатель:</strong> ${order.recipientCity}, ${order.recipientAddress}<br />
+                            <strong>Вес груза:</strong> ${order.weight} кг<br />
+                            <strong>Дата забора:</strong> ${pickupDate}
+                        </p>
+                        <a href="/Orders/Details/${order.orderId}" class="btn btn-primary">Подробнее</a>
+                    </div>
+                </div>
+            </div>
+        `;
+        // Добавляем новый заказ в начало списка
+        document.getElementById("ordersRow").insertAdjacentHTML("afterbegin", orderHtml);
+    });
+
+    // Запускаем подключение
+    connection.start().catch(function (err) {
+        return console.error(err.toString());
+    });
+</script>
