Update project with SOLID & OOP principals

--- a/Views/Orders/Index.cshtml
+++ b/Views/Orders/Index.cshtml
@@ -1,4 +1,4 @@
-﻿@model IEnumerable<test_versta.Models.Order>
+﻿@model IEnumerable<test_versta.ViewModels.OrderViewModel>
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
 
 @{
