--- a/Views/Orders/Create.cshtml
+++ b/Views/Orders/Create.cshtml
@@ -1,4 +1,4 @@
-﻿@model test_versta.Models.Order
+﻿@model test_versta.ViewModels.OrderViewModel
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
 
 @{
