--- a/Views/Orders/Details.cshtml
+++ b/Views/Orders/Details.cshtml
@@ -1,4 +1,4 @@
-﻿@model test_versta.Models.Order
+﻿@model test_versta.ViewModels.OrderViewModel
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
 
 @{
@@ -32,11 +32,11 @@
                     <dt class="col-5">Дата забора</dt>
                     <dd class="col-7">@Model.PickupDate.ToString("yyyy-MM-dd")</dd>
                 </dl>
-                @if(Model.Client != null)
+                @if(Model.ClientFullName != null)
                 {
                     <div class="mt-3">
                         <h5>Информация об отправителе (клиенте):</h5>
-                        <p>@Model.Client.FullName (@Model.Client.Email)</p>
+                        <p>@Model.ClientFullName (@Model.ClientEmail)</p>
                     </div>
                 }
                 <a asp-action="Index" class="btn btn-secondary">Вернуться к списку</a>
